fix(java): declare the Java 25 provider JVM compatibility profile
Keep Protobuf Unsafe and shaded Netty native-access warnings visible in the
ordinary SDK suites. Explicitly acknowledge only those operations for the
controlled Java provider participant, whose shared runner still requires
empty stderr, a successful exit, all assertions and physical cleanup.
Document the exact profile and preserve other languages and SDK consumers.